[project]
name = "ensemble-methods-for-time-series-forecasting-in-python"
version = "0.1.0"
description = "Companion code for Medium article: ensemble methods for time series forecasting in python"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "darts>=0.40",
    "matplotlib>=3.10.9",
    "numpy>=2.4.4",
    "pandas>=2.3.3",
    "pyyaml>=6.0.3",
    "scikit-learn>=1.8.0",
    "signalplot>=0.1",
]

[tool.uv]
package = false

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
